--- a/exercicios/paginas/pg01/exercicio01.html
+++ b/exercicios/paginas/pg01/exercicio01.html
@@ -4,37 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="./estilos/main.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon">
     <title>Exercício Prototipação</title>
 </head>
 <body>
-    <header>
+    <header class="">
         <nav>
             <ul>
-                <li><a href="../../index.html"><i class='bx bx-left-arrow-alt'></i></a></li>
-                <li><a href="../../index.html">Home</a></li>
-                <li><a href="exercicio02.html"><i class='bx bx-right-arrow-alt' ></a></i></li>
+                <li><a href="../../../index.html"><i class='bx bx-left-arrow-alt'></i></a></li>
+                <li><a href="../../../index.html">Home</a></li>
+                <li><a href="../pg02/exercicio02.html"><i class='bx bx-right-arrow-alt' ></a></i></li>
             </ul>
         </nav>
     </header>
-    <main class="main">
+    <main>
         <section>
          <div>
              <h1>Exercício de Prototipação de um Website</h1>
              <a href="https://www.figma.com/proto/SNCse36oSl6dpOwX5bBXEI/Atividade_Senai_PWFE?node-id=52-196&t=3Pcl9TU2y8C6nTAi-1">Verifique como ele ficou aqui!</a>
          </div>
          <div>
-            <img src="../media/prototipacao.png" alt="Imagem da Prototipação">
+            <img src="./prototipacao.png" alt="Imagem da Prototipação">
          </div>
         </section>
     </main>
-    <footer>
-        <section>
-            <div>
+    <footer class="footer-website-styles">
+        <section class="footer-website-section-styles">
+            <div class="footer-website-div-styles">
                 <h2>Portfólio Senai</h2>
             </div>
-            <div>
+            <div class="footer-website-div-styles">
                 <p>&copy; Feito por Gustavo Bruno - 2025</p>
             </div>
         </section>
