--- a/exercicios/paginas/pg04/exercicio04.html
+++ b/exercicios/paginas/pg04/exercicio04.html
@@ -5,31 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon">
     <title>Exercício JavaScript </title>
-    <style>
-        main{
-            display: flex;
-            flex-direction: column;
-            width: 50%;
-            height: 100%;
-            align-items: center;
-            gap: 5rem;
-        }
-        #MinhaDiv{
-            background-color: red;
-            padding: 20px;
-            border-radius: 20px;
-        }
-    </style>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="exercicio03.html"><i class='bx bx-left-arrow-alt'></i></a></li>
-                <li><a href="../../index.html">Home</a></li>
-                <li><a href="exercicio05.html"><i class='bx bx-right-arrow-alt' ></a></i></li>
+                <li><a href="../pg03/exercicio03.html"><i class='bx bx-left-arrow-alt'></i></a></li>
+                <li><a href="../../../index.html">Home</a></li>
+                <li><a href="../pg05/exercicio05.html"><i class='bx bx-right-arrow-alt' ></a></i></li>
             </ul>
         </nav>
     </header>
@@ -44,12 +29,12 @@
             <script src="../scripts/exercicio04.js"></script>
         </section>
     </main>
-    <footer>
-        <section>
-            <div>
+    <footer class="footer-website-styles">
+        <section class="footer-website-section-styles">
+            <div class="footer-website-div-styles">
                 <h2>Portfólio Senai</h2>
             </div>
-            <div>
+            <div class="footer-website-div-styles">
                 <p>&copy; Feito por Gustavo Bruno - 2025</p>
             </div>
         </section>
