--- a/exercicios/paginas/pg05/exercicio05.html
+++ b/exercicios/paginas/pg05/exercicio05.html
@@ -5,40 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon">
     <title>Exercício JavaScript </title>
-    <style>
-        body{
-            height: 100%;
-            width: 100%;
-        }
-        main{
-            display: flex;
-            height: 100%;
-            width: 100%;
-            justify-content: center;
-            padding: 20px;
-        }
-        form{
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-            align-items: center;
-        }
-        .container{
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            align-items: flex-end;
-        }
-    </style>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="exercicio04.html"><i class='bx bx-left-arrow-alt'></i></a></li>
-                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../pg04/exercicio04.html"><i class='bx bx-left-arrow-alt'></i></a></li>
+                <li><a href="../../../index.html">Home</a></li>
                 <li><a href="#"><i class='bx bx-right-arrow-alt' ></a></i></li>
             </ul>
         </nav>
@@ -85,12 +60,12 @@
             </div>
        </form> -->
     </main>
-    <footer>
-        <section>
-            <div>
-                <h2>Portfólio Senai</h2>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+    <footer class="footer-website-styles">
+        <section class="footer-website-section-styles">
+            <div class="footer-website-div-styles">
+                <h2>Portfólio Senai</h2>
             </div>
-            <div>
+            <div class="footer-website-div-styles">
                 <p>&copy; Feito por Gustavo Bruno - 2025</p>
             </div>
         </section>
