--- a/exercicios/paginas/pg02/exercicio02.html
+++ b/exercicios/paginas/pg02/exercicio02.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="./estilos/main.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon">
     <title>Exercícios</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="exercicio01.html"><i class='bx bx-left-arrow-alt' title="Aula Anterior"></i></a></li>
-                <li><a href="../../index.html" title="Página Inicial">Home</a></li>
-                <li><a href="exercicio03.html"><i class='bx bx-right-arrow-alt' title="Próxima Aula"></a></i></li>
+                <li><a href="../pg01/exercicio01.html"><i class='bx bx-left-arrow-alt' title="Aula Anterior"></i></a></li>
+                <li><a href="../../../index.html" title="Página Inicial">Home</a></li>
+                <li><a href="../pg03/exercicio03.html"><i class='bx bx-right-arrow-alt' title="Próxima Aula"></a></i></li>
             </ul>
         </nav>
     </header>
@@ -213,12 +214,12 @@
             </form>
         </section>
     </main>
-    <footer>
-        <section>
-            <div>
+    <footer class="footer-website-styles">
+        <section class="footer-website-section-styles">
+            <div class="footer-website-div-styles">
                 <h2>Portfólio Senai</h2>
             </div>
-            <div>
+            <div class="footer-website-div-styles">
                 <p>&copy; Feito por Gustavo Bruno - 2025</p>
             </div>
         </section>
