--- a/exercicios/paginas/pg03/exercicio03.html
+++ b/exercicios/paginas/pg03/exercicio03.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon">
     <title>Arrays </title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="exercicio02.html"><i class='bx bx-left-arrow-alt'></i></a></li>
-                <li><a href="../../index.html">Home</a></li>
-                <li><a href="exercicio04.html"><i class='bx bx-right-arrow-alt' ></a></i></li>
+                <li><a href="../pg02/exercicio02.html"><i class='bx bx-left-arrow-alt'></i></a></li>
+                <li><a href="../../../index.html">Home</a></li>
+                <li><a href="../pg04/exercicio04.html"><i class='bx bx-right-arrow-alt' ></a></i></li>
             </ul>
         </nav>
     </header>
@@ -34,21 +34,25 @@
         <section>
             <div>
                 <h1>Exercícios</h1>
-                <p>Verifique o Console, dev!</p>
+
+                <p>Selecione uma atividade!</p>
+
+                
+
             </div>
         </section>
     </main>
-    <footer>
-        <section>
-            <div>
+    <footer class="footer-website-styles">
+        <section class="footer-website-section-styles">
+            <div class="footer-website-div-styles">
                 <h2>Portfólio Senai</h2>
             </div>
-            <div>
+            <div class="footer-website-div-styles">
                 <p>&copy; Feito por Gustavo Bruno - 2025</p>
             </div>
         </section>
     </footer>
-    <script src="../scripts/exercicio03.js"></script>
+    <script type="module" src="../scripts/arrays/arrays.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
