--- a/exercicios/paginas/pg05/exercicio05.html
+++ b/exercicios/paginas/pg05/exercicio05.html
@@ -20,7 +20,21 @@
         </nav>
     </header>
     <main>
-       <!-- <form title="Exercício 9">
+        <div class="button-container">
+            <button class="ex-btn" data-ex="1">Exercício 1</button>
+            <button class="ex-btn" data-ex="2">Exercício 2</button>
+            <button class="ex-btn" data-ex="3">Exercício 3</button>
+            <button class="ex-btn" data-ex="4">Exercício 4</button>
+            <button class="ex-btn" data-ex="5">Exercício 5</button>
+            <button class="ex-btn" data-ex="6">Exercício 6</button>
+            <button class="ex-btn" data-ex="7">Exercício 7</button>
+            <button class="ex-btn" data-ex="8">Exercício 8</button>
+            <button class="ex-btn" data-ex="10">Exercício 10</button>
+            <button class="ex-btn" data-ex="11">Exercício 11</button>
+            <button class="ex-btn" data-ex="12">Exercício 12</button>
+            <button class="ex-btn" data-ex="13">Exercício 13</button>
+        </div>
+       <form title="Exercício 9">
             <h1>Exercício 9</h1>
             <div class="container">
 
@@ -59,7 +73,7 @@
                 
                 <button type="submit" onclick="validarCamposFormulario()">Enviar</button>
             </div>
-       </form> -->
+       </form>
     </main>
     <footer class="footer-website-styles">
         <section class="footer-website-section-styles">
@@ -71,7 +85,7 @@
             </div>
         </section>
     </footer>
-    <script src="../../scripts/arrow_function/arrowfunction.js"></script>
+    <script  type="module" src="../../scripts/arrow_function/arrowfunction.js" defer></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
